--- a/templates/dbtools.html
+++ b/templates/dbtools.html
@@ -55,7 +55,7 @@
     							</ul> 		     
     							<ul class="nav navbar-nav navbar-right">
     								<li class="propClone">
-    									<a href="#">Login <span class="fa fa-lock"></span></a>
+    									<a href="logout">Logout <span class="fa fa-lock"></span></a>
     								</li>
     							</ul>
     						</div><!-- /.navbar-collapse -->
