--- a/templates/dbtools.html
+++ b/templates/dbtools.html
@@ -14,7 +14,7 @@
     
     <link href="static/css/style.css" rel="stylesheet">
 
-    <link href="staticcss/style.complete.css" rel="stylesheet">
+    <link href="static/css/style.complete.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -68,7 +68,7 @@
     				
     					<div class="col-md-12">
     						
-    						<h1 class="text-center margin-top-100 editContent">With Great Power Comes Great Responsibility</h1>
+    						<h1 class="text-center margin-top-100 editContent"></h1>
     						
     						<div class="text-center">
     							
