added ability to enter multiple IDs in the field for sending delivery confirmations!

--- a/templates/csr.html
+++ b/templates/csr.html
@@ -142,7 +142,7 @@
                         <form id="make_up" class="appnitro"  method="post" action="">
                                     <div class="form_description">
                             <h2>Send Delivery Confirmation Email</h2>
-                            <p>Use this to send an email to a user after their delivery has been made. This can currently only take one ID at a time. Bug Thomas if you want it to take a list of them at a time.</p>
+                            <p>Use this to send an email to a user after their delivery has been made. Now with more IDs support so you can stop bugging Thomas! ID's must be seperated by a comma - ',' - and any emails that cant be found will be printed on the next page</p>
                         </div>                      
                             <ul >
                             
